minor alterations
