# newStructure/models/customer-model.js
@@ -8,18 +8,18 @@ class CustomerModel {
     
     async createLogin(data) {
         try {
-            const { first_name, last_name, user_name, password } = data;
+            const { first_name, last_name, email, password } = data;
             const date = this.getDate();
-            const newLogin = await pool.query('INSERT INTO customers (user_name, password, date_created, contact_id, first_name, last_name) VALUES ($1, $2, $3, null, $4, $5) RETURNING user_name, date_created, contact_id, first_name, last_name ', [user_name, password, date, first_name, last_name]);
+            const newLogin = await pool.query('INSERT INTO customers (email, password, date_created, contact_id, first_name, last_name) VALUES ($1, $2, $3, null, $4, $5) RETURNING email, date_created, contact_id, first_name, last_name ', [email, password, date, first_name, last_name]);
             return newLogin.rows[0];
         } catch (err) {
             throw new Error(err);
         }
     }
 
-    async checkExistingUserName(username) {
+    async checkExistingEmail(email) {
         try {
-            const data = await pool.query('SELECT * FROM customers WHERE user_name = $1', [username]);
+            const data = await pool.query('SELECT * FROM customers WHERE email = $1', [email]);
             return data.rows?.length ? data.rows[0] : null;
         } catch (err) {
             throw new Error(err);
@@ -65,7 +65,7 @@ class CustomerModel {
 
     async getCustomerData(custid) {
         try {
-            const data = await pool.query('SELECT customers.id as customer_id, contacts.id as contact_id, payment_id, first_name, last_name, user_name, address_line1, address_line2, town, city, county, post_code, phone, email FROM customers JOIN contacts ON customers.contact_id = contacts.id WHERE customers.id = $1', [custid]);
+            const data = await pool.query('SELECT customers.id as customer_id, contacts.id as contact_id, payment_id, first_name, last_name, address_line1, address_line2, town, city, county, post_code, phone, email FROM customers JOIN contacts ON customers.contact_id = contacts.id WHERE customers.id = $1', [custid]);
             return data.rows?.length ? data.rows[0] : null;
         } catch (err) {
             throw new Error(err);
