# swagger.yml
@@ -55,7 +55,7 @@ paths:
                   type: string                  
                 last_name:
                   type: string                  
-                user_name: 
+                email: 
                   type: string                  
                 password: 
                   type: string   
@@ -63,7 +63,7 @@ paths:
               required: 
                 - first_name
                 - last_name
-                - user_name
+                - email
                 - password
                                 
       responses:
@@ -72,7 +72,7 @@ paths:
           schema:
             type: object
             properties: 
-              user_name:
+              email:
                 type: string
               date_created: 
                 type: string
@@ -102,7 +102,7 @@ paths:
             schema: 
               type: object
               properties:                  
-                user_name: 
+                email: 
                   type: string                  
                 password: 
                   type: string   
@@ -127,7 +127,7 @@ paths:
             type: object
             items:
   /auth/logout:
-    get:
+    post:
       summary: "Logs out a user"
       tags: [Auth]
       description: "Logs out a user"
